# Platformation2

./: .gitmodules  CMakeLists.txt  construct  platformation.files
data/ui/: main_window.ui
platformation/: CMakeLists.txt  canvas.cpp  canvas.h  layer.cpp  layer.h  level.cpp  level.h  level_serializer.h  main.cpp  main_window.cpp  main_window.h  tile_chooser.cpp  tile_chooser.h  user_data_types.h
platformation/gtkgl/: gtk_gl_widget.cpp  gtk_gl_widget.h
platformation/serializers/: pfn_serializer.cpp  pfn_serializer.h
