CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(platformation)

ADD_DEFINITIONS("-Wall -std=c++0x -g")

SET (CMAKE_C_COMPILER "/usr/bin/clang")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")

FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(Boost COMPONENTS system filesystem thread date_time regex REQUIRED)
FIND_PACKAGE(KGLT REQUIRED)
FIND_PACKAGE(KAZMATH REQUIRED)
PKG_CHECK_MODULES(GL REQUIRED gl)
PKG_CHECK_MODULES(GLU REQUIRED glu)
PKG_CHECK_MODULES(CURL REQUIRED libcurl)

LINK_LIBRARIES(
    ${KGLT_LIBRARIES}
    ${KAZMATH_LIBRARIES}
    ${Boost_FILESYSTEM_LIBRARY}
    ${Boost_REGEX_LIBRARY}
    ${Boost_THREAD_LIBRARY}
    ${Boost_SYSTEM_LIBRARY}
    ${Boost_DATE_TIME_LIBRARY}
    ${GL_LIBRARIES}
    ${GLU_LIBRARIES}
    ${CURL_LIBRARIES}
)

ADD_SUBDIRECTORY(platformation)
